--- a/index.html
+++ b/index.html
@@ -1,107 +1,154 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="vi">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Agriculture - Digital Twin Dashboard</title>
-    <link rel="stylesheet" href="./src/css/variables.css">
-    <link rel="stylesheet" href="./src/css/global.css">
-    <link rel="stylesheet" href="./src/css/components.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <!-- Chart.js -->
+  <head>
+    <!-- Bảng mã kí tự -->
+    <meta charset="UTF-8" />
+    <!-- Giúp trình duyệt hiển thị đúng kích thước màn hình thiết bị di động -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Tiêu đề hiển thị tab trình duyệt -->
+    <title>DATN_CHERRY_TOMATO</title>
+    <!-- liên kết 3 file css nội bộ từ thư mục src/css -->
+    <link rel="stylesheet" href="./src/css/variables.css" />
+    <link rel="stylesheet" href="./src/css/global.css" />
+    <link rel="stylesheet" href="./src/css/components.css" />
+    <!-- Tải Font chữ Inter từ Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Tải bộ Icon Material Icons Round của Google (dùng để hiển thị các icon như ngôi nhà, cái lá, cài đặt...) -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Round"
+      rel="stylesheet"
+    />
+    <!-- Tải thư viện Chart.js từ CDN (máy chủ bên ngoài). Thư viện này dùng để vẽ các biểu đồ tăng trưởng, nhiệt độ, độ ẩm... -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
+    <!-- Khung app chính (container) -->
+    <!-- id "app" để CSS/JS truy cập -->
     <div id="app">
-        <!-- Sidebar -->
-        <aside class="sidebar">
-            <div class="logo">
-                <span class="material-icons-round">eco</span>
-                <h2>Nông Nghiệp 4.0</h2>
-            </div>
-            <nav class="nav-menu">
-                <a href="#/dashboard" class="nav-item active" data-path="/dashboard">
-                    <span class="material-icons-round">dashboard</span>
-                    <span>Tổng quan</span>
-                </a>
-                <a href="#/realtime" class="nav-item" data-path="/realtime">
-                    <span class="material-icons-round">sensors</span>
-                    <span>Giám sát</span>
-                </a>
-                <a href="#/trends" class="nav-item" data-path="/trends">
-                    <span class="material-icons-round">timeline</span>
-                    <span>Biểu đồ</span>
-                </a>
-                <a href="#/ai" class="nav-item" data-path="/ai">
-                    <span class="material-icons-round">psychology</span>
-                    <span>AI Bệnh lá</span>
-                </a>
-                <a href="#/prediction" class="nav-item" data-path="/prediction">
-                    <span class="material-icons-round">trending_up</span>
-                    <span>Dự đoán</span>
-                </a>
-                <a href="#/twin" class="nav-item" data-path="/twin">
-                    <span class="material-icons-round">dns</span>
-                    <span>Mô hình số</span>
-                </a>
-                <a href="#/control" class="nav-item" data-path="/control">
-                    <span class="material-icons-round">tune</span>
-                    <span>Điều khiển</span>
-                </a>
-                <a href="#/alerts" class="nav-item" data-path="/alerts">
-                    <span class="material-icons-round">notifications</span>
-                    <span>Cảnh báo</span>
-                    <span class="badge" id="alert-badge" style="display:none">0</span>
-                </a>
-                <a href="#/settings" class="nav-item" data-path="/settings">
-                    <span class="material-icons-round">settings</span>
-                    <span>Cài đặt</span>
-                </a>
-            </nav>
-            <div class="sidebar-footer">
-                <div class="connection-status online">
-                    <span class="status-dot"></span>
-                    <span id="connection-text">Hệ thống Online</span>
-                </div>
-            </div>
-        </aside>
+      <!-- Sidebar - Thanh điều hướng bên trái -->
+      <!--<aside>: Thẻ ngữ nghĩa dùng cho thanh bên.-->
+      <aside class="sidebar">
+        <!--.logo Hiển thị icon cái lá và tên ứng dụng -->
+        <div class="logo">
+          <span class="material-icons-round">eco</span>
+          <h2>Smart Agriculture</h2>
+        </div>
+        <!--nav là vùng chứa các link điều hướng. -->
+        <nav class="nav-menu">
+          <!--<a ...> là link. -->
+          <!--href="#/dashboard": dùng hash routing (đổi phần sau dấu #). -->
+          <!--+Khi click, trang thường không reload, JS đọc #/dashboard để thay nội dung. -->
+          <!--+nav-item để CSS định dạng.active để đánh dấu đang chọn (sáng lên). -->
+          <!--+“data-*” là dữ liệu tùy chọn bạn gắn vào thẻ. -->
+          <!--+JS có thể đọc data-path để biết đang ở view nào. -->
+          <a href="#/dashboard" class="nav-item active" data-path="/dashboard">
+            <!--Hiện icon và chữ tổng quan, tương tự cho các thẻ sau -->
+            <span class="material-icons-round">dashboard</span>
+            <span>Tổng quan</span>
+          </a>
+          <a href="#/realtime" class="nav-item" data-path="/realtime">
+            <span class="material-icons-round">sensors</span>
+            <span>Giám sát</span>
+          </a>
+          <a href="#/trends" class="nav-item" data-path="/trends">
+            <span class="material-icons-round">timeline</span>
+            <span>Biểu đồ</span>
+          </a>
+          <a href="#/ai" class="nav-item" data-path="/ai">
+            <span class="material-icons-round">psychology</span>
+            <span>AI Bệnh lá</span>
+          </a>
+          <a href="#/prediction" class="nav-item" data-path="/prediction">
+            <span class="material-icons-round">trending_up</span>
+            <span>Dự đoán</span>
+          </a>
+          <a href="#/twin" class="nav-item" data-path="/twin">
+            <span class="material-icons-round">dns</span>
+            <span>Mô hình số</span>
+          </a>
+          <a href="#/control" class="nav-item" data-path="/control">
+            <span class="material-icons-round">tune</span>
+            <span>Điều khiển</span>
+          </a>
+          <a href="#/alerts" class="nav-item" data-path="/alerts">
+            <span class="material-icons-round">notifications</span>
+            <span>Cảnh báo</span>
+            <!--Mục "Cảnh báo" có thêm <span class="badge">. Đây là con số đỏ nhỏ (ví dụ: thông báo có 3 lỗi). 
+            Ban đầu nó bị ẩn (display:none) và số là 0. JavaScript sẽ cập nhật số này khi có dữ liệu-->
+            <span class="badge" id="alert-badge" style="display: none">0</span>
+          </a>
+          <a href="#/settings" class="nav-item" data-path="/settings">
+            <span class="material-icons-round">settings</span>
+            <span>Cài đặt</span>
+          </a>
+        </nav>
+        <!--<div class="sidebar-footer"> : chân sidebar.-->
+        <!--   <div class="connection-status online"></div>
+            hiển thị trạng thái kết nối.
+            online là class để CSS tô màu xanh, v.v.-->
+        <div class="sidebar-footer">
+          <div class="connection-status online">
+            <!--chấm tròn trạng thái(css vẽ)-->
+            <span class="status-dot"></span>
+            <!--chữ trạng thái,id để JS đổi sang offline khi mất kết nối-->
+            <span id="connection-text">Hệ thống Online</span>
+          </div>
+        </div>
+      </aside>
 
-        <!-- Main Content -->
-        <main class="main-content">
-            <header class="top-bar">
-                <div class="breadcrumbs">
-                    <h1 id="page-title">Tổng quan hệ thống</h1>
-                    <span id="current-time">--:--:--</span>
-                </div>
-                <div class="actions">
-                    <button class="icon-btn" id="theme-toggle">
-                        <span class="material-icons-round">dark_mode</span>
-                    </button>
-                    <div class="user-profile">
-                        <div class="avatar">QTV</div>
-                        <span>Quản trị viên</span>
-                    </div>
-                </div>
-            </header>
-
-            <!-- Dynamic Content Area -->
-            <div id="content-area" class="content-area">
-                <!-- Views will be injected here -->
-                <div class="loading-spinner">Đang tải hệ thống...</div>
+      <!-- Main Content - khu vực nội dung bên phải-->
+      <main class="main-content">
+        <!-- Top Bar - Thanh trên cùng -->
+        <header class="top-bar">
+          <!--breadcrumbs/tiêu đề & giờ-->
+          <div class="breadcrumbs">
+            <!--<h1 id="page-title">Tổng quan hệ thống</h1>
+            tiêu đề trang hiện tại.
+            JS sẽ thay đổi theo route: Dashboard / Realtime / …-->
+            <h1 id="page-title">Tổng quan hệ thống</h1>
+            <!--hiển thị thời gian hiện tại- do JS cập nhật-->
+            <span id="current-time">--:--:--</span>
+          </div>
+          <!--nút bấm đổi theme sáng tối
+          id="theme-toggle" để JS bắt sự kiện click.
+          Icon “dark_mode”.-->
+          <div class="actions">
+            <button class="icon-btn" id="theme-toggle">
+              <span class="material-icons-round">dark_mode</span>
+            </button>
+            <!--Hiển thị thông tin user hiện tại-->
+            <div class="user-profile">
+              <div class="avatar">QTV</div>
+              <span>Bui Van Yen</span>
             </div>
-        </main>
+          </div>
+        </header>
+
+        <!-- Dynamic Content Area - Vùng nội dung động (JS sẽ nhét view vào đây) -->
+        <!-- <div id="content-area" class="content-area">
+            Đây là “khu vực thay đổi”.
+            Khi bạn click sidebar, JS sẽ thay nội dung trong div này -->
+        <div id="content-area" class="content-area">
+          <!-- Views will be injected here- màn hình loading ban đầu, khi tải xong sẽ xóa -->
+          <div class="loading-spinner">Đang tải hệ thống...</div>
+        </div>
+      </main>
     </div>
 
-    <!-- Global Toast Container -->
+    <!-- Global Toast Container - vùng phụ, nơi JS thông báo các thông báo nhỏ ví dụ Luu thanh công-->
     <div id="toast-container"></div>
 
     <!-- Modals -->
     <div id="modal-overlay" class="hidden"></div>
-
+    <!-- Nhúng file JS chính -->
+    <!--type="module" nghĩa là:
+    JS được chạy theo chuẩn module (ESM)
+    bạn có thể dùng import/export
+    scope “sạch” hơn, tránh đụng biến global. -->
     <script type="module" src="./src/js/main.js"></script>
-</body>
-
+  </body>
 </html>
