--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
     <!-- Tải thư viện Chart.js từ CDN (máy chủ bên ngoài). Thư viện này dùng để vẽ các biểu đồ tăng trưởng, nhiệt độ, độ ẩm... -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="./src/js/libs/chart.js"></script>
   </head>
 
   <body>
